--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "tachyons": "^4.7.4"
   },
   "scripts": {
+    "//": "heroku buildpacks:set heroku/nodejs",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "git subtree push --prefix build heroku master",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
