--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10",
-    "redux": "^3.7.2",
-    "tachyons": "^4.7.4"
+    "redux": "^3.7.2"
   },
   "scripts": {
-    "//": "heroku buildpacks:set heroku/nodejs",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "git subtree push --prefix build heroku master",
