--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-client": "^1.9.0-1",
+    "enzyme": "^2.9.1",
     "graphql-tag": "^2.4.2",
     "react": "^15.6.1",
     "react-apollo": "^1.4.8",
@@ -22,8 +23,5 @@
     "deploy": "git subtree push --prefix build heroku master",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "jest-enzyme": "^3.6.1"
   }
 }
